--- a/AdminLTE/Views/Role/Create.cshtml
+++ b/AdminLTE/Views/Role/Create.cshtml
@@ -26,7 +26,7 @@
                         <h3 class="card-title">@pageTitle</h3>
                     </div>
                     <div class="card-body">
-                        <form asp-action="@formAction" method="post" novalidate>
+                        <form asp-action="@formAction" asp-route-id="@Model.Id" method="post" novalidate>
                             @if (isEdit)
                             {
                                 <input type="hidden" asp-for="Id" />
